[package]
name = "gpsavg"
version = "0.2.0"
edition = "2021"
authors = [
    "Alejandro Perea <aleok.inf@gmail.com>",
    "Marco Castell <castellmartinmarco1@gmail.com>",
]
description = "Commandline program to obtain the average position of GPS devices using NMEA 0183, among other stats"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.5", features = ["derive"] }
colored = "2.0.4"
glam = "0.24.2"
map_3d = { version = "0.1.5" }
